--- a/projetocrmangular/src/app/app.component.html
+++ b/projetocrmangular/src/app/app.component.html
@@ -2,7 +2,10 @@
   <div class="container">
     <ul class="nav justify-content-center">
       <li class="nav-item">
-        <a class="nav-link active" routerLink="produto">Produto</a>
+        <a class="nav-link active" routerLink="marca">Marca</a>
+      </li>
+      <li class="nav-item">
+        <a class="nav-link active" routerLink="categoria">Categoria</a>
       </li>
       <li class="nav-item">
         <a class="nav-link active" routerLink="cliente">Cliente</a>
