--- a/projetocrmangular/src/app/app.component.html
+++ b/projetocrmangular/src/app/app.component.html
@@ -16,6 +16,9 @@
       <li class="nav-item">
         <a class="nav-link active" routerLink="venda">Venda</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link active" routerLink="listagem-vendas">Lista Vendas</a>
+      </li>
     </ul>
   </div>
 
