--- a/projetocrmangular/src/app/cliente/cliente.component.html
+++ b/projetocrmangular/src/app/cliente/cliente.component.html
@@ -34,8 +34,8 @@
       <small class="text-danger"[class.d-none]="dataDeNascimento.valid || dataDeNascimento.untouched" >Data de nascimento é obrigatório</small>
     </div>
 
-    <button [disabled]="userForm.form.invalid" class="m-1 btn btn-light btn-outline-primary" Buttonlable="DepScreen" type="submit">Salvar</button>
-    <button class="m-1 btn btn-light btn-outline-primary" Buttonlable="DepScreen" type="reset">Limpar Formulário</button>
+    <button [disabled]="userForm.form.invalid" class="m-1 btn btn-default" Buttonlable="DepScreen" type="submit">Salvar</button>
+    <button class="m-1 btn btn-default" Buttonlable="DepScreen" type="reset">Limpar Formulário</button>
 
   </form>
 
