--- a/projetocrmangular/src/app/app.component.html
+++ b/projetocrmangular/src/app/app.component.html
@@ -1,23 +1,24 @@
-  <h3 class="display-4 text-center">Projeto Loja</h3>
+  <img src="assets/imagens/strass.jpeg" alt="Strass" class="img-responsive" style="display: block;margin-left: auto;
+  margin-right: auto;" height="100" width="150">
   <div class="container">
     <ul class="nav justify-content-center">
       <li class="nav-item">
-        <a class="nav-link active" routerLink="marca">Marca</a>
+        <a class="nav-link active" routerLink="marca" style="color:black">Marca</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" routerLink="categoria">Categoria</a>
+        <a class="nav-link active" routerLink="categoria" style="color:black">Categoria</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" routerLink="cliente">Cliente</a>
+        <a class="nav-link active" routerLink="cliente" style="color:black">Cliente</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" routerLink="listagem-clientes">Lista Clientes</a>
+        <a class="nav-link active" routerLink="listagem-clientes" style="color:black">Lista Clientes</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" routerLink="venda">Venda</a>
+        <a class="nav-link active" routerLink="venda" style="color:black">Venda</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link active" routerLink="listagem-vendas">Lista Vendas</a>
+        <a class="nav-link active" routerLink="listagem-vendas" style="color:black">Lista Vendas</a>
       </li>
     </ul>
   </div>
