--- a/projetocrmangular/src/app/app.component.html
+++ b/projetocrmangular/src/app/app.component.html
@@ -20,6 +20,9 @@
       <li class="nav-item">
         <a class="nav-link active" routerLink="listagem-vendas" style="color:black">Lista Vendas</a>
       </li>
+      <li class="nav-item">
+        <a class="nav-link active" routerLink="relatorio" style="color:black">Relatorio</a>
+      </li>
     </ul>
   </div>
 
